--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coming Soon</title>
   <style>
     body {
       margin: 0;
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: beige;
-      font-family: Arial, sans-serif;
+      height: 100vh;
+      background: beige; /* optional, you can remove if you want transparency */
     }
-    h1 {
-      color: brown;
-      font-size: 3rem;
+    img {
+      max-width: 100%;
+      max-height: 100%;
     }
   </style>
 </head>
 <body>
-  <h1>COMING SOON!</h1>
+  <img src="comingsoon.gif" alt="Coming Soon">
 </body>
 </html>
