--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: beige; /* optional, you can remove if you want transparency */
+      background: #957D65; /* your background color */
     }
     img {
       max-width: 100%;
